[tool.poetry]
name = "cisco_ping"
version = "0.1.0"
description = "A service for checking given URL-s output"
authors = ["Pawel Czech"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
uvicorn = "^0.17.6"
fastapi = "^0.77.1"
httpx = "^0.22.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
